# cross_library_execution

./: .gitignore  21Jan_micro.csv  AbstractCompute.h  AbstractThrustCompute.cuh  Adapter.h  CMakeCache.txt  CMakeLists.txt  EvalGroup.sh  Makefile  README.txt  ThrustCompute.cu  Thrust_something.cu  Thrust_something.cuh  adapter.cu  cmake_install.cmake  cross_library_execution  cross_library_execution.cbp  execQueries.sh  main.cu  measure_all.sh
ArrayFireOperations/: ArrayFireAdapter.cu  ArrayFireAdapter.cuh  afComputeOps.cu  afComputeOps.cuh
Base/: BaseCompute.cpp  BaseCompute.h
BoostOperations/: BoostAdapter.cpp  BoostAdapter.h  BoostComputeOps.cpp  BoostComputeOps.h
Plug/: Compute.cpp  Compute.h
ThrustOperations/: ThrustAdapter.cu  ThrustAdapter.cuh  ThrustComputeOps.cu  ThrustComputeOps.cuh
Thrust_SwitchBoard/: ThrustCompute.cu  ThrustCompute.cuh
cudfOperations/: cudfComputeOps.cu  cudfComputeOps.cuh
evaluation/: executeQueries.cpp  executeQueries.cpp.save  executeQueries.h  microBenchmark.cpp  microBenchmark.h
oneapiOperations/: oneapiComputeOps.cpp  oneapiComputeOps.h
test_tpch_queries/: executeQueries.cpp  executeQueries.h
